- Added support for VESC FWs 5.3 and 6.0