@@ -17,7 +17,7 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-#ifndef CONFIG_H#define CONFIG_H//#define HW_3v4//#define HW_4v0#define HW_4v1// Uncomment when first flashing a module to test the LED functions// Comment when releasing//#define LED_Test
+#ifndef CONFIG_H#define CONFIG_H/* Uncomment based on target HW version */#define HW_3v4//#define HW_4v0//#define HW_4v1/* Uncomment if target will be used in a summer board *///#define SBX/* Uncomment when first flashing a module to test the LED functions */// Comment when releasing//#define LED_Test
 #ifdef HW_3v4
 uint16_t HW_VER = 304;
 #elif defined(HW_4v0)
@@ -25,4 +25,4 @@ uint16_t HW_VER = 400;
 #elif defined(HW_4v1)
 uint16_t HW_VER = 401;
 #endif
-uint16_t TTL_FW = 19; // Format: v12.34 = 1234 | v0.5 = 0005#define BOOT_BTN PIN_PA15#endif
+uint16_t TTL_FW = 20; // Format: v12.34 = 1234 | v0.5 = 0005#define BOOT_BTN PIN_PA15#endif
